tests/negative/test_mac_arg_name_duplicate.orb
eval (mac foo (x y x) {});

fnc main () () {};